--- a/Lectures/Lecture_18-pre.ipynb
+++ b/Lectures/Lecture_18-pre.ipynb
@@ -278,11 +278,12 @@
    "source": [
     "1. *Imbalanced classification*: In many cases, the event or variable outcome we want to predict is *rare* in our training data. \n",
     "    - Ex. whether a credit card transaction is fraudulent (the vast majority are not)\n",
-    "    - In these cases, our classifier could achieve very high *accuracy* by classifying *everything* it sees as non-cancerous or non-fraudulent. In this case, accuracy isn't really telling us what we want to know about the classifier.\n",
+    "    - In this case, our classifier could achieve very high accuracy by classifying *everything* it sees as non-fraudulent\n",
+    "    - So with imbalanced labels, accuracy isn't really telling us what we want to know about the classifier.\n",
     "\n",
-    "2. *Varying costs and benefits*: In other cases, independent of the probability of particular events, the costs of an error differ *dramatically* depending on the *type* of error.\n",
-    "    - Ex. a classifier for determining whether a medical image contains a tumor should *never* make the mistake of saying a tumor is benign when it's cancerous. If it sometimes says a tumor is cancerous and a follow-up reveals it's not, this is much less bad.\n",
-    "    - A regular *accuracy* metric treats all mistakes equally, but in these cases, we want our model evaluation to penalize some mistakes much more than others.\n",
+    "2. *Varying costs and benefits*: In other cases, independent of the probability of particular events, the *costs* of an error differ dramatically depending on the *type* of error.\n",
+    "    - Ex. a classifier for determining whether a medical image contains a tumor should *never* make the mistake of saying a tumor is non-cancerous when it's actually cancerous. If it sometimes says a tumor is cancerous and a follow-up reveals it's not, this is much less bad.\n",
+    "    - A regular *accuracy* metric treats all mistakes equally, but in these cases, we want our model evaluation to penalize some mistakes (incorrect negative labels) much more than others (incorrect positive labels).\n",
     "\n",
     "*So what do we do?*"
    ]
@@ -378,7 +379,9 @@
     "\n",
     "*Which values do we like and which ones do we dislike?*\n",
     "\n",
-    "..."
+    "...\n",
+    "\n",
+    "Note: this allows us to distinguish between different *types* of errors, which in turn lets us move beyond just accuracy as a metric."
    ]
   },
   {
@@ -475,7 +478,7 @@
     "\n",
     "*What's our TPR for the data above?*\n",
     "\n",
-    "*What does this actually tell us?*"
+    "*What does this actually tell us?* *Do we want it to be large or small?*"
    ]
   },
   {
@@ -485,6 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# sklearn has a TPR \"recall\" function\n",
     "from sklearn.metrics import recall_score\n",
     "\n",
     "recall_score(y_true = knn_eval['binary_species'], \n",
@@ -509,7 +513,7 @@
     "\n",
     "*What's our FNR for the data above?*\n",
     "\n",
-    "*What does this actually tell us?*"
+    "*What does this actually tell us?* *Do we want it to be large or small?*"
    ]
   },
   {
@@ -527,7 +531,7 @@
     "\n",
     "*What's our FPR for the data above?*\n",
     "\n",
-    "*What does this actually tell us?*"
+    "*What does this actually tell us?* *Do we want it to be large or small?*"
    ]
   },
   {
@@ -545,7 +549,7 @@
     "\n",
     "*What's our TNR for the data above?*\n",
     "\n",
-    "*What does this actually tell us?*"
+    "*What does this actually tell us?* *Do we want it to be large or small?*"
    ]
   },
   {
@@ -565,7 +569,7 @@
     "\n",
     "*What's our PPV for the data above?*\n",
     "\n",
-    "*What does this actually tell us?*"
+    "*What does this actually tell us?* *Do we want it to be large or small?*"
    ]
   },
   {
@@ -575,6 +579,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# sklearn also has a prectision function we can use directly\n",
     "from sklearn.metrics import precision_score\n",
     "\n",
     "precision_score(y_true = knn_eval['binary_species'], \n",
@@ -597,7 +602,7 @@
     "\n",
     "*What's our FDR for the data above?*\n",
     "\n",
-    "*What does this actually tell us?*"
+    "*What does this actually tell us?* *Do we want it to be large or small?*"
    ]
   },
   {
@@ -613,7 +618,7 @@
     "\n",
     "*What's our NPV for the data above?*\n",
     "\n",
-    "*What does this actually tell us?*"
+    "*What does this actually tell us?* *Do we want it to be large or small?*"
    ]
   },
   {
@@ -629,7 +634,7 @@
     "\n",
     "*What's our FOR for the data above?*\n",
     "\n",
-    "*What does this actually tell us?*"
+    "*What does this actually tell us?* *Do we want it to be large or small?*"
    ]
   },
   {
@@ -639,7 +644,7 @@
    "source": [
     "### Metrics for summarizing the full confusion matrix\n",
     "\n",
-    "The above metrics above demonstrated how we can quantify certain key aspects of our classifier's performance. \n",
+    "The metrics above demonstrated how we can quantify certain key aspects of our classifier's performance. \n",
     "\n",
     "But in many cases, we want to summarize how our classifier is performing overall with a metric applied to the confusion matrix as a whole. How can we do this?\n",
     "\n",
@@ -713,7 +718,7 @@
     "#### F1 Score\n",
     "\n",
     "The F1 score is the *harmonic mean* (good for averaging *rates*) of TPR and PPV.\n",
-    "- Combines the rate at which our predictions of \"versicolor\" were correct and the rate at which true versicolors led us to predict \"versicolor\"\n",
+    "- Combines the rate at which our predictions of \"versicolor\" were correct across all \"versicolor\" predictions (PPV) and the rate at which true versicolors led us to predict \"versicolor\" (TPR).\n",
     "\n",
     "F1 Score = $2 \\times \\dfrac{TPR \\times PPV}{TPR + PPV}$\n",
     "\n"
@@ -777,7 +782,6 @@
     "                                             'setosa': 'non-versicolor'})\n",
     "y_vals = iris.loc[:, 'species_binary']\n",
     "\n",
-    "\n",
     "xtrain, xtest, ytrain, ytest = train_test_split(x_vals, y_vals, \n",
     "                                                test_size = 0.2, # we'll use a small test set here\n",
     "                                                random_state = 0 # make this process reproducible\n",
@@ -825,7 +829,7 @@
     "\n",
     "Critically, our choice of classification threshold will affect our evaluation metrics above in predictable ways.\n",
     "\n",
-    "In our `iris` example above, labeling new data points based on the mode of 3 nearest neighbors sets a threshold of 2/3 for 'versicolor' labels. \n",
+    "In our `iris` dataset, labeling new data points based on the mode of 3 nearest neighbors sets a threshold of 2/3 for 'versicolor' labels. \n",
     "\n",
     "If we set a *lower* threshold of 1/3: \n",
     "- We will label *more* test items as 'versicolor' since we only need 1 out of 3 neighbors to be 'versicolor'\n",
@@ -853,31 +857,6 @@
     "Then, we'll look at how different *thresholds* for identifying test items as 'versicolor' change our **true positive rate** and **false positive rate** in opposite directions.\n",
     "\n",
     "**Step 1**: use the k-NN `predict_proba` function shown above to get probability values for each test item $p(\\text{'versicolor'})$ rather than hard classifications"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3e73a2a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# x_vals = iris.loc[:, ('sepal_length', 'sepal_width')]\n",
-    "\n",
-    "# iris['species_binary'] = iris['species'].map({'versicolor': 'versicolor',\n",
-    "#                                              'virginica': 'non-versicolor',\n",
-    "#                                              'setosa': 'non-versicolor'})\n",
-    "# y_vals = iris.loc[:, 'species_binary']\n",
-    "\n",
-    "\n",
-    "# xtrain, xtest, ytrain, ytest = train_test_split(x_vals, y_vals, \n",
-    "#                                                 test_size = 0.3, # we'll use a small test set here\n",
-    "#                                                 random_state = 0 # make this process reproducible\n",
-    "#                                                )\n",
-    "# xtrain = xtrain.reset_index(drop = True)\n",
-    "# xtest = xtest.reset_index(drop = True)\n",
-    "# ytrain = ytrain.reset_index(drop = True)\n",
-    "# ytest = ytest.reset_index(drop = True)"
    ]
   },
   {
@@ -917,15 +896,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO make this a loop over keys in a lookup with \"k1_label\": 0.2 etc.\n",
-    "\n",
-    "# Which test items get labeled 'versicolor' if you only need 1 nearest neighbor to be versicolor?\n",
-    "versicolor_probs['k0_label'] = np.where( # np.where is like an \"if-else\" condition for this column value\n",
-    "    versicolor_probs['versicolor_prob'] >= 0, # condition\n",
-    "    'versicolor', # value in all rows where condition above is True\n",
-    "    'non-versicolor' # value in all rows where condition above is False\n",
-    ")\n",
-    "\n",
     "# Which test items get labeled 'versicolor' if you only need 1 nearest neighbor to be versicolor?\n",
     "versicolor_probs['k1_label'] = np.where( # np.where is like an \"if-else\" condition for this column value\n",
     "    versicolor_probs['versicolor_prob'] >= 0.2, # condition\n",
@@ -979,26 +949,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# What's the TPR for our lowest threshold (k0) above?\n",
-    "k0_tpr = recall_score(y_true = versicolor_probs['true_label'], \n",
-    "                      y_pred = versicolor_probs['k0_label'],\n",
-    "                      labels = ['versicolor', 'non-versicolor'],\n",
-    "                      pos_label = 'versicolor'\n",
-    "                     )\n",
-    "# What's the FPR for our lowest threshold (k0) above?\n",
-    "# Note FPR = 1 - TNR and TNR is just the recall (TPR) for the *negative* label, which we can set below\n",
-    "k0_fpr = 1 - recall_score(y_true = versicolor_probs['true_label'], \n",
-    "                          y_pred = versicolor_probs['k0_label'],\n",
-    "                          labels = ['versicolor', 'non-versicolor'],\n",
-    "                          pos_label = 'non-versicolor' # positive label\n",
-    "                         )\n",
-    "\n",
-    "# Same as above for k2 threshold\n",
+    "# What's the TPR for our lowest threshold (k1) above?\n",
     "k1_tpr = recall_score(y_true = versicolor_probs['true_label'], \n",
     "                      y_pred = versicolor_probs['k1_label'],\n",
     "                      labels = ['versicolor', 'non-versicolor'],\n",
     "                      pos_label = 'versicolor'\n",
     "                     )\n",
+    "# What's the FPR for our lowest threshold (k1) above?\n",
+    "# Note FPR = 1 - TNR and TNR is just the recall (TPR) for the *negative* label, which we can set below\n",
     "k1_fpr = 1 - recall_score(y_true = versicolor_probs['true_label'], \n",
     "                          y_pred = versicolor_probs['k1_label'],\n",
     "                          labels = ['versicolor', 'non-versicolor'],\n",
@@ -1074,9 +1032,9 @@
     "\n",
     "np.arange(0, 1.1, 0.2)\n",
     "roc_df = pd.DataFrame({\n",
-    "    \"threshold\": np.arange(0, 1.1, 0.2),\n",
-    "    \"TPR\": [k0_tpr, k1_tpr, k2_tpr, k3_tpr, k4_tpr, k5_tpr],\n",
-    "    \"FPR\": [k0_fpr, k1_fpr, k2_fpr, k3_fpr, k4_fpr, k5_fpr]\n",
+    "    \"threshold\": np.arange(0.2, 1.1, 0.2),\n",
+    "    \"TPR\": [k1_tpr, k2_tpr, k3_tpr, k4_tpr, k5_tpr],\n",
+    "    \"FPR\": [k1_fpr, k2_fpr, k3_fpr, k4_fpr, k5_fpr]\n",
     "})\n",
     "\n",
     "roc_df"
@@ -1089,7 +1047,7 @@
    "source": [
     "Now, our final step is to graph this relationship. \n",
     "\n",
-    "This is called an **ROC curve** and we'll see why it's useful once we've plotted it."
+    "This is called an **ROC curve** (Receiver Operating Characteristic) and we'll see why it's useful once we've plotted it."
    ]
   },
   {
@@ -1101,12 +1059,55 @@
    "source": [
     "# ROC curve by hand\n",
     "\n",
-    "sns.pointplot(\n",
+    "g= sns.pointplot(\n",
     "    data = roc_df,\n",
     "    x = \"FPR\",\n",
     "    y = \"TPR\"\n",
     ")\n",
-    "# plt.axline((0, 0), (1, 1), color = 'r')\n"
+    "\n",
+    "g.set_xlabel(\"False Positive Rate\")\n",
+    "g.set_ylabel(\"True Positive Rate\")\n",
+    "g.set_xticklabels([])\n",
+    "g.set_yticklabels([])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7db14312",
+   "metadata": {},
+   "source": [
+    "*What is that??*\n",
+    "\n",
+    "Answer: a somewhat clumsy ROC curve (since we're not working with much data here).\n",
+    "\n",
+    "*What does this mean?*\n",
+    "\n",
+    "- Each of our points above is the TPR and FPR for a given *classification threshold*\n",
+    "- When we set a *low threshold*, we expect TPR and FPR to be very high (top right)\n",
+    "- When we set a *high threshold*, we expect TPR and FPR to both be very low (bottom left)\n",
+    "\n",
+    "What about in between?\n",
+    "\n",
+    "- For every threshold in between the top right (low) and bottom left (high), we want to *keep TPR high while FPR goes down*. \n",
+    "- Put another way, we want to reduce FPR without having to also sacrifice TPR. \n",
+    "\n",
+    "Given the above, **a good ROC curve is one that swings as close to the *top left* portion of the axes as possible**.\n",
+    "\n",
+    "Here's a picture that illustrates this:\n",
+    "\n",
+    "![roc](img/roc.png)\n",
+    "\n",
+    "([source](https://medium.com/the-owl/evaluation-metrics-part-3-47c315e07222))\n",
+    "\n",
+    "\n",
+    "**Compared to what?**\n",
+    "\n",
+    "Note the dashed line across the middle. This indicates what you would expect to happen with TPR and FPR if your classifier was *random*. In other words, we can compare our ROC curve to the \"random classifier\" line to determine how much better our classifier is doing than random guessing. \n",
+    "\n",
+    "We use a metric called *area under the curve (AUC)* to calculate this difference.\n",
+    "\n",
+    "This measures the area under the ROC curve. The value ranges from 0 to 1, but since a random classifier has an AUC of 0.5, we're looking for values > 0.5.\n"
    ]
   },
   {
@@ -1118,7 +1119,9 @@
     "\n",
     "Fortunately, we don't need to do all the manual calculations above to generate an ROC curve.\n",
     "\n",
-    "As usual, `scikit-learn` has us covered!"
+    "As usual, `scikit-learn` has us covered!\n",
+    "\n",
+    "Below, we call the `roc_curve` function to generate an ROC curve:"
    ]
   },
   {
@@ -1130,18 +1133,52 @@
    "source": [
     "from sklearn.metrics import roc_curve\n",
     "\n",
-    "\n",
-    "\n",
     "fpr, tpr, thresholds = roc_curve(\n",
     "    y_true = ytest,\n",
     "    y_score = knn.predict_proba(X = xtest)[:, 1],\n",
     "    pos_label = 'versicolor'\n",
     ")\n",
     "\n",
-    "sns.pointplot(\n",
+    "\n",
+    "tpr\n",
+    "fpr\n",
+    "thresholds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f48e0e7",
+   "metadata": {},
+   "source": [
+    "Then, we can graph the results in seaborn:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67dd0f5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = sns.pointplot(\n",
     "    x = fpr,\n",
     "    y = tpr\n",
-    ")"
+    ")\n",
+    "\n",
+    "g.set_xlabel(\"False Positive Rate\")\n",
+    "g.set_ylabel(\"True Positive Rate\")\n",
+    "g.set_xticklabels(np.arange(0, 1.1, 0.2))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fa1bca2",
+   "metadata": {},
+   "source": [
+    "### AUC\n",
+    "\n",
+    "`scikit-learn` also exports an AUC function that will report how our ROC curve fares:"
    ]
   },
   {
@@ -1159,6 +1196,24 @@
     "    y_score = knn.predict_proba(X = xtest)[:, 1],\n",
     "    labels = ['versicolor', 'non-versicolor']\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bd64609",
+   "metadata": {},
+   "source": [
+    "# Evaluating classification algorithms: summary\n",
+    "\n",
+    "\n",
+    "When we use a classification algorithm like $k$-nearest neighbors, we want a way to quantify *how well it performs* with test data.\n",
+    "\n",
+    "1. The most intuitive way to do so is with accuracy, but this can mis-construe our classifier's performance when we have imbalanced data.\n",
+    "\n",
+    "2. Alternatives that rely on the *confusion matrix* allow us to weight the relative impact of different kinds of *errors* (false positives and false negatives).\n",
+    "\n",
+    "3. Recognizing that our rate of false positives and false negatives is sensitive to the *classification threshold* used in our model (e.g., the \"voting\" procedure in k-NN), we can use an ROC curve to examine the classifier's success across a range of thresholds.\n",
+    "\n"
    ]
   }
  ],
