lecture 19, week 7 overview

--- a/Lectures/Lecture_19-pre.ipynb
+++ b/Lectures/Lecture_19-pre.ipynb
@@ -25,8 +25,7 @@
     "- Evaluating classification algorithms\n",
     "\n",
     "**Today's agenda:**\n",
-    "- Evaluating classification algorithms cont'd (ROC curves)\n",
-    "- Logistic regression\n"
+    "- Evaluating classification algorithms cont'd (ROC curves)\n"
    ]
   },
   {
@@ -44,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6290133",
+   "id": "5f7ba225",
    "metadata": {},
    "source": [
     "# Advanced classifier evaluation: ROC curves"
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e6f777b",
+   "id": "160467e9",
    "metadata": {},
    "source": [
     "First, let's load in the `iris` dataset and remind ourselves what it is we're classifying to begin with..."
@@ -61,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "773a8afd",
+   "id": "d13b0e45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2580ef95",
+   "id": "3efad487",
    "metadata": {},
    "source": [
     "Last time, we discussed:\n",
@@ -87,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a83e346",
+   "id": "ae873e7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9db85332",
+   "id": "cd080280",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13322d27",
+   "id": "db41da80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9d9c783",
+   "id": "d0e89af1",
    "metadata": {},
    "source": [
     "## Hard and Soft Classification\n",
@@ -168,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4c0004e",
+   "id": "9d8d6975",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21878ca1",
+   "id": "a7e5de3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e647fae3",
+   "id": "b8d703aa",
    "metadata": {},
    "source": [
     "In the predictions above, the first column is the probability of 'non-versicolor' and the second is the probability of 'versicolor'.\n",
@@ -207,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cab82411",
+   "id": "1f55d6a4",
    "metadata": {},
    "source": [
     "## Different thresholds change evaluation metrics\n",
@@ -232,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc8faaea",
+   "id": "72794d3c",
    "metadata": {},
    "source": [
     "## ROC curves: expressing accuracy across different thresholds\n",
@@ -247,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d28b4634",
+   "id": "4de5e730",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9decd79e",
+   "id": "2f0a5efc",
    "metadata": {},
    "source": [
     "**Step 2**: Now, let's pick a range of *classification thresholds* for 'versicolor' and show how this changes what values we assign to the test items.\n",
@@ -277,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00f3a0ee",
+   "id": "c87bfca9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34d8c29f",
+   "id": "0d5ccd1b",
    "metadata": {},
    "source": [
     "**Step 3**: How do our **true positive rate** and **false positive rate** change for each of these thresholds?"
@@ -330,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7705447b",
+   "id": "f177728b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf372990",
+   "id": "b6b9d1cb",
    "metadata": {},
    "source": [
     "Phew! Now let's combine the above to see how they compare:"
@@ -411,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac6a0f7c",
+   "id": "11d380bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23871798",
+   "id": "1756da08",
    "metadata": {},
    "source": [
     "Now, our final step is to graph this relationship. \n",
@@ -440,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da52defc",
+   "id": "f42de497",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fca3524",
+   "id": "97e30880",
    "metadata": {},
    "source": [
     "*What is that??*\n",
@@ -499,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "863ee16d",
+   "id": "6fada00e",
    "metadata": {},
    "source": [
     "## ROC curves in scikit-learn\n",
@@ -514,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bab911d",
+   "id": "28d6b426",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a91a093",
+   "id": "f870740c",
    "metadata": {},
    "source": [
     "Then, we can graph the results:"
@@ -543,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac77f4f1",
+   "id": "1420b959",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd84d202",
+   "id": "04768794",
    "metadata": {},
    "source": [
     "### AUC\n",
@@ -571,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc926128",
+   "id": "af9e0654",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,14 +579,14 @@
     "\n",
     "roc_auc_score(\n",
     "    y_true = ytest,\n",
-    "    y_score = knn.predict_proba(X = xtest)[:, 1],\n",
+    "    y_score = knn.predict_proba(X = xtest)[:, 1], # get probabilities for 'versicolor'\n",
     "    labels = ['versicolor', 'non-versicolor']\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cfbdca88",
+   "id": "09d5b7cf",
    "metadata": {},
    "source": [
     "# Evaluating classification algorithms: summary\n",
@@ -605,19 +604,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06219f36",
+   "id": "d1bac7ae",
    "metadata": {},
    "source": [
     "***"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c8e3d210",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b074520",
    "metadata": {},
-   "source": [
-    "# Logistic Regression\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
