--- a/Lectures/Week7_Overview.ipynb
+++ b/Lectures/Week7_Overview.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "# Week 7\n",
     "\n",
-    "**Lecture 19:**\n",
+    "**Lecture 19:** Evaluating classification cont'd. (ROC curves)\n",
     "\n",
-    "**Lecture 20:**\n",
+    "**Lecture 20:** Logistic regression and other classifiers\n",
     "\n",
-    "**Lecture 21:**"
+    "**Lecture 21:** Ethics of AI / machine learning"
    ]
   }
  ],
