--- a/Lectures/Lecture_20-post.ipynb
+++ b/Lectures/Lecture_20-post.ipynb
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "608ef2fb",
+   "id": "ef393163",
    "metadata": {},
    "source": [
     "**Understanding the classification**\n",
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "475fc980",
+   "id": "9647ac8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
    "id": "d5cd0f65",
    "metadata": {},
    "source": [
-    "We can use the predictions as the basis for betting understanding what the tree is doing:"
+    "We can use the predictions as the basis for better understanding what the tree is doing:"
    ]
   },
   {
@@ -625,7 +625,7 @@
    "id": "c3711d02",
    "metadata": {},
    "source": [
-    "We can also draw on the same resources that we talked about for assessing our $k$-nearest neighbors classifier\n",
+    "We can also draw on the same resources that we talked about for assessing our $k$-nearest neighbors classifier:\n",
     "- Accuracy / F1 score\n",
     "- ROC curves"
    ]
