--- a/Lectures/Lecture_20-post.ipynb
+++ b/Lectures/Lecture_20-post.ipynb
@@ -347,13 +347,13 @@
     "g = sns.lineplot(x = xtest[:, 0], y = ypreds[:, 0])\n",
     "g.set_ylim(0, 1)\n",
     "g.set_xlabel(\"Age\")\n",
-    "g.set_ylabel(\"p(CDH)\")\n",
+    "g.set_ylabel(\"p(CHD)\")\n",
     "plt.show()\n",
     "\n",
     "# Finally, let's look at the \"linear\" relationship underlying logistic regression\n",
     "h = sns.lineplot(x = xtest[:, 0], y = np.log(ypreds[:, 0]/(1-ypreds[:, 0])))\n",
     "h.set_xlabel(\"Age\")\n",
-    "h.set_ylabel(\"Log odds of CDH\")\n",
+    "h.set_ylabel(\"Log odds of CHD\")\n",
     "plt.show()"
    ]
   },
@@ -466,9 +466,7 @@
    "source": [
     "Whoa. \n",
     "\n",
-    "**Decision trees can overfit data *a lot* if they aren't constrained.**\n",
-    "\n",
-    "Let's try this again..."
+    "**Decision trees can overfit data *a lot* if they aren't constrained.**"
    ]
   },
   {
@@ -482,6 +480,14 @@
     "dtree.score(X = xtest, y = ytest)\n",
     "\n",
     "# Seems like we're overfitting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e3d76b2",
+   "metadata": {},
+   "source": [
+    "*Let's try this again...*"
    ]
   },
   {
@@ -528,10 +534,10 @@
     "- `value = [226, 120]`: This is the number of training values on the left (`values[0]`) and the right (`values[1]`) of the node\n",
     "\n",
     "NOTE: With a depth of 1, at the very bottom, we have:\n",
-    "- 170 people were correctly classified as \"No CDH\" with this rule (true negatives)\n",
-    "- 47 people were classified as \"No CDH\" with this rule *incorrectly* (false negatives)\n",
-    "- 56 people were classified as \"CDH\" with this rule *incorrectly* (false positives)\n",
-    "- 73 people were classified as \"CDH\" with this rule *correctly* (true positives)"
+    "- 170 people were correctly classified as \"No CHD\" with this rule (true negatives)\n",
+    "- 47 people were classified as \"No CHD\" with this rule *incorrectly* (false negatives)\n",
+    "- 56 people were classified as \"CHD\" with this rule *incorrectly* (false positives)\n",
+    "- 73 people were classified as \"CHD\" with this rule *correctly* (true positives)"
    ]
   },
   {
