--- a/Lectures/Lecture_20-post.ipynb
+++ b/Lectures/Lecture_20-post.ipynb
@@ -133,8 +133,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sns.scatterplot(x = xtrain[:, 0], y = ytrain)\n",
-    "sns.scatterplot(x = xtest[:, 0], y = ytest)\n",
+    "# sns.scatterplot(x = xtrain[:, 0], y = ytrain, alpha = .5)\n",
+    "sns.scatterplot(x = xtest[:, 0], y = ytest, alpha = .5)\n",
     "plt.xlabel(\"Age\")\n",
     "plt.ylabel(\"CHD\")"
    ]
@@ -260,7 +260,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "binary_preds = log_reg.predict(xtest)\n",
     "binary_preds\n",
     "\n",
@@ -289,7 +288,7 @@
    "outputs": [],
    "source": [
     "# Let's show the actual test data\n",
-    "g = sns.scatterplot(x = xtest[:, 0], y = ytest, hue = ytest == binary_preds)\n",
+    "g = sns.scatterplot(x = xtest[:, 0], y = ytest, hue = ytest == binary_preds, alpha = .5)\n",
     "\n",
     "# Now, let's plot our logistic regression curve\n",
     "sns.lineplot(x = xtest[:, 0], y = soft_preds[:, 1])\n",
@@ -499,7 +498,7 @@
    "source": [
     "dtree = DecisionTreeClassifier(\n",
     "    # how many layers our decision tree should have (toggle between 1 and 2 and see how this impacts results)\n",
-    "    max_depth = 2,\n",
+    "    max_depth = 1,\n",
     "    random_state = 1\n",
     ")\n",
     "\n",
@@ -606,7 +605,7 @@
     "# This reveals the cutoff(s) chosen by our decision tree! \n",
     "train_preds = dtree.predict(X = xtrain)\n",
     "\n",
-    "g = sns.scatterplot(x = xtrain[:, 0], y = ytrain, hue = ytrain == train_preds)\n",
+    "g = sns.scatterplot(x = xtrain[:, 0], y = ytrain, hue = ytrain == train_preds, alpha = .25)\n",
     "# These are the decision boundaries in the tree. You can see how they segment our data into more accurate predictions\n",
     "g.axvline(50.5)\n",
     "g.axvline(59.5)\n",
@@ -747,11 +746,11 @@
     "# svm.support_vectors_\n",
     "\n",
     "# For example, we can view the items in the training set that formed the support vector\n",
-    "sns.scatterplot(x = xtrain[:, 0], y = ytrain)\n",
+    "sns.scatterplot(x = xtrain[:, 0], y = ytrain, alpha = .25)\n",
     "plt.title(\"Training data\")\n",
     "plt.show()\n",
     "\n",
-    "sns.scatterplot(x = xtrain[svm.support_][:, 0], y = ytrain[svm.support_])\n",
+    "sns.scatterplot(x = xtrain[svm.support_][:, 0], y = ytrain[svm.support_], alpha = .25)\n",
     "plt.title(\"Support vectors\")\n",
     "plt.show()"
    ]
