--- a/Lectures/Week8_Overview.ipynb
+++ b/Lectures/Week8_Overview.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Week 8\n",
     "\n",
-    "**Lecture 22:**\n",
+    "**Lecture 22:** Clustering: introduction\n",
     "\n",
     "**Lecture 23:**\n",
     "\n",
